--- a/TCCMDN/TCCMDN/Web.config
+++ b/TCCMDN/TCCMDN/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TCCMDN-20141121102119;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TCCMDN-20141121102119.mdf" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TCCMDN-20141121102119;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TCCMDN-20141121102119.mdf" />
+  -->
+  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=test;Integrated Security=SSPI;" />
   </connectionStrings>
   <appSettings>
     <add key="master" value="MDN"/>
